# trainnect-llm-council

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  QUICKSTART.md  README.md  TEST_PLAN_SEARCH.md  main.py  package-lock.json  pyproject.toml  start.sh  stop.sh
backend/: file_parser.py  main.py  prompts.py  search.py  settings.py  storage.py
backend/providers/: anthropic.py  custom_openai.py
backend/tests/: __init__.py  test_file_parser.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  CouncilGrid.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage2.css  Stage2.jsx  Stage3.jsx  ThinkBlockRenderer.jsx
frontend/src/components/settings/: CouncilConfig.jsx  PromptSettings.jsx  ProviderSettings.jsx
frontend/src/utils/: modelHelpers.js
plans/: file-upload-feature-plan.md
